--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	</parent>
 	<groupId>com.rickjinny</groupId>
 	<artifactId>java</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Java-Summary-Project</name>
 	<description>Demo project for Spring Boot</description>
 
