--- a/java-summary-server/pom.xml
+++ b/java-summary-server/pom.xml
@@ -207,6 +207,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.rickjinny</groupId>
+            <artifactId>java-summary-api</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
