--- a/java-summary-server/src/main/resources/application.properties
+++ b/java-summary-server/src/main/resources/application.properties
@@ -30,8 +30,8 @@ mybatis.mapper-locations=classpath:mappers/*.xml
 
 #\u90AE\u4EF6\u914D\u7F6E
 spring.mail.host=smtp.qq.com
-spring.mail.username=1974544863@qq.com
-spring.mail.password=cmtvsjvhonkjdaje
+spring.mail.username=xxxxxxxxxxxx@qq.com
+spring.mail.password=xxxxxxxx
 
 mail.send.from=1974544863@qq.com
 
